--- a/rosey/translations/nl/blog/life-shrinks-or-expands-in-proportion-to-one-s-courage.yaml
+++ b/rosey/translations/nl/blog/life-shrinks-or-expands-in-proportion-to-one-s-courage.yaml
@@ -2,27 +2,28 @@ _inputs:
   $:
     type: object
     comment: "[blog/life-shrinks-or-expands-in-proportion-to-one-s-courage](https:/\
-      /adjective-noun.cloudvent.net/blog/life-shrinks-or-expands-in-proportion-\
-      to-one-s-courage)  //  [Git
-      history](https://github.com/org/repo/commits/staging/./rosey/translations\
-      /nl/blog/life-shrinks-or-expands-in-proportion-to-one-s-courage.yaml)"
+      /exotic-bison.cloudvent.net/blog/life-shrinks-or-expands-in-proportion-to\
+      -one-s-courage)  //  [Git
+      history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/./rosey\
+      /translations/nl/blog/life-shrinks-or-expands-in-proportion-to-one-s-cour\
+      age.yaml)"
     options:
       place_groups_below: false
       groups:
         - heading: Still to translate (nl)
           comment: "[blog/life-shrinks-or-expands-in-proportion-to-one-s-courage](https:/\
-            /adjective-noun.cloudvent.net/blog/life-shrinks-or-expands-in-propo\
-            rtion-to-one-s-courage)  //  [Git
-            history](https://github.com/org/repo/commits/staging/./rosey/transl\
-            ations/nl/blog/life-shrinks-or-expands-in-proportion-to-one-s-coura\
-            ge.yaml)"
+            /exotic-bison.cloudvent.net/blog/life-shrinks-or-expands-in-proport\
+            ion-to-one-s-courage)  //  [Git
+            history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
+            /rosey/translations/nl/blog/life-shrinks-or-expands-in-proportion-t\
+            o-one-s-courage.yaml)"
           inputs: []
         - heading: Already translated (nl)
           comment: "[blog/life-shrinks-or-expands-in-proportion-to-one-s-courage](https:/\
-            /adjective-noun.cloudvent.net/blog/life-shrinks-or-expands-in-propo\
-            rtion-to-one-s-courage)  //  [Git
-            history](https://github.com/org/repo/commits/staging/./rosey/transl\
-            ations/nl/blog/life-shrinks-or-expands-in-proportion-to-one-s-coura\
-            ge.yaml)"
+            /exotic-bison.cloudvent.net/blog/life-shrinks-or-expands-in-proport\
+            ion-to-one-s-courage)  //  [Git
+            history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
+            /rosey/translations/nl/blog/life-shrinks-or-expands-in-proportion-t\
+            o-one-s-courage.yaml)"
           inputs: []
 urlTranslation: blog/life-shrinks-or-expands-in-proportion-to-one-s-courage.html
