--- a/rosey/translations/nl/blog/page/2.yaml
+++ b/rosey/translations/nl/blog/page/2.yaml
@@ -1,25 +1,25 @@
 _inputs:
   $:
     type: object
-    comment: "[blog/page/2/](https://adjective-noun.cloudvent.net/blog/page/2/)  //  \
+    comment: "[blog/page/2/](https://exotic-bison.cloudvent.net/blog/page/2/)  //  \
       [Git
-      history](https://github.com/org/repo/commits/staging/./rosey/translations\
-      /nl/blog/page/2.yaml)"
+      history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/./rosey\
+      /translations/nl/blog/page/2.yaml)"
     options:
       place_groups_below: false
       groups:
         - heading: Still to translate (nl)
-          comment: "[blog/page/2/](https://adjective-noun.cloudvent.net/blog/page/2/)  //  \
+          comment: "[blog/page/2/](https://exotic-bison.cloudvent.net/blog/page/2/)  //  \
             [Git
-            history](https://github.com/org/repo/commits/staging/./rosey/transl\
-            ations/nl/blog/page/2.yaml)"
+            history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
+            /rosey/translations/nl/blog/page/2.yaml)"
           inputs:
             - Blog
         - heading: Already translated (nl)
-          comment: "[blog/page/2/](https://adjective-noun.cloudvent.net/blog/page/2/)  //  \
+          comment: "[blog/page/2/](https://exotic-bison.cloudvent.net/blog/page/2/)  //  \
             [Git
-            history](https://github.com/org/repo/commits/staging/./rosey/transl\
-            ations/nl/blog/page/2.yaml)"
+            history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
+            /rosey/translations/nl/blog/page/2.yaml)"
           inputs: []
   Blog:
     label: Blog
@@ -27,6 +27,6 @@ _inputs:
     type: text
     options: {}
     comment: "[See in
-      context](https://adjective-noun.cloudvent.net/blog/page/2/#:~:text=Blog)"
+      context](https://exotic-bison.cloudvent.net/blog/page/2/#:~:text=Blog)"
 urlTranslation: blog/page/2/index.html
 Blog: ""
