--- a/rosey/translations/nl/project/mountains.yaml
+++ b/rosey/translations/nl/project/mountains.yaml
@@ -1,25 +1,25 @@
 _inputs:
   $:
     type: object
-    comment: "[project/mountains](https://adjective-noun.cloudvent.net/project/moun\
-      tains)  //  [Git
-      history](https://github.com/org/repo/commits/staging/./rosey/translations\
-      /nl/project/mountains.yaml)"
+    comment: "[project/mountains](https://exotic-bison.cloudvent.net/project/mounta\
+      ins)  //  [Git
+      history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/./rosey\
+      /translations/nl/project/mountains.yaml)"
     options:
       place_groups_below: false
       groups:
         - heading: Still to translate (nl)
-          comment: "[project/mountains](https://adjective-noun.cloudvent.net/project/moun\
-            tains)  //  [Git
-            history](https://github.com/org/repo/commits/staging/./rosey/transl\
-            ations/nl/project/mountains.yaml)"
+          comment: "[project/mountains](https://exotic-bison.cloudvent.net/project/mounta\
+            ins)  //  [Git
+            history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
+            /rosey/translations/nl/project/mountains.yaml)"
           inputs:
             - Mountains
         - heading: Already translated (nl)
-          comment: "[project/mountains](https://adjective-noun.cloudvent.net/project/moun\
-            tains)  //  [Git
-            history](https://github.com/org/repo/commits/staging/./rosey/transl\
-            ations/nl/project/mountains.yaml)"
+          comment: "[project/mountains](https://exotic-bison.cloudvent.net/project/mounta\
+            ins)  //  [Git
+            history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
+            /rosey/translations/nl/project/mountains.yaml)"
           inputs: []
   Mountains:
     label: Mountains
@@ -27,7 +27,7 @@ _inputs:
     type: text
     options: {}
     comment: "[See in
-      context](https://adjective-noun.cloudvent.net/project/mountains#:~:text=M\
-      ountains)"
+      context](https://exotic-bison.cloudvent.net/project/mountains#:~:text=Mou\
+      ntains)"
 urlTranslation: project/mountains.html
 Mountains: ""
