--- a/rosey/translations/nl/project/prague-city.yaml
+++ b/rosey/translations/nl/project/prague-city.yaml
@@ -1,25 +1,25 @@
 _inputs:
   $:
     type: object
-    comment: "[project/prague-city](https://adjective-noun.cloudvent.net/project/pr\
-      ague-city)  //  [Git
-      history](https://github.com/org/repo/commits/staging/./rosey/translations\
-      /nl/project/prague-city.yaml)"
+    comment: "[project/prague-city](https://exotic-bison.cloudvent.net/project/prag\
+      ue-city)  //  [Git
+      history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/./rosey\
+      /translations/nl/project/prague-city.yaml)"
     options:
       place_groups_below: false
       groups:
         - heading: Still to translate (nl)
-          comment: "[project/prague-city](https://adjective-noun.cloudvent.net/project/pr\
-            ague-city)  //  [Git
-            history](https://github.com/org/repo/commits/staging/./rosey/transl\
-            ations/nl/project/prague-city.yaml)"
+          comment: "[project/prague-city](https://exotic-bison.cloudvent.net/project/prag\
+            ue-city)  //  [Git
+            history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
+            /rosey/translations/nl/project/prague-city.yaml)"
           inputs:
             - Prague city
         - heading: Already translated (nl)
-          comment: "[project/prague-city](https://adjective-noun.cloudvent.net/project/pr\
-            ague-city)  //  [Git
-            history](https://github.com/org/repo/commits/staging/./rosey/transl\
-            ations/nl/project/prague-city.yaml)"
+          comment: "[project/prague-city](https://exotic-bison.cloudvent.net/project/prag\
+            ue-city)  //  [Git
+            history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
+            /rosey/translations/nl/project/prague-city.yaml)"
           inputs: []
   Prague city:
     label: Prague city
@@ -27,7 +27,7 @@ _inputs:
     type: text
     options: {}
     comment: "[See in
-      context](https://adjective-noun.cloudvent.net/project/prague-city#:~:text\
-      =Prague%20city)"
+      context](https://exotic-bison.cloudvent.net/project/prague-city#:~:text=P\
+      rague%20city)"
 urlTranslation: project/prague-city.html
 Prague city: ""
