--- a/rosey/translations/nl/blog.yaml
+++ b/rosey/translations/nl/blog.yaml
@@ -1,28 +1,28 @@
 _inputs:
   $:
     type: object
-    comment: "[blog/](https://adjective-noun.cloudvent.net/blog/)  //  [Git
-      history](https://github.com/org/repo/commits/staging/./rosey/translations\
-      /nl/blog.yaml)"
+    comment: "[blog/](https://exotic-bison.cloudvent.net/blog/)  //  [Git
+      history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/./rosey\
+      /translations/nl/blog.yaml)"
     options:
       place_groups_below: false
       groups:
         - heading: Still to translate (nl)
-          comment: "[blog/](https://adjective-noun.cloudvent.net/blog/)  //  [Git
-            history](https://github.com/org/repo/commits/staging/./rosey/transl\
-            ations/nl/blog.yaml)"
+          comment: "[blog/](https://exotic-bison.cloudvent.net/blog/)  //  [Git
+            history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
+            /rosey/translations/nl/blog.yaml)"
           inputs:
             - Blog
         - heading: Already translated (nl)
-          comment: "[blog/](https://adjective-noun.cloudvent.net/blog/)  //  [Git
-            history](https://github.com/org/repo/commits/staging/./rosey/transl\
-            ations/nl/blog.yaml)"
+          comment: "[blog/](https://exotic-bison.cloudvent.net/blog/)  //  [Git
+            history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
+            /rosey/translations/nl/blog.yaml)"
           inputs: []
   Blog:
     label: Blog
     hidden: false
     type: text
     options: {}
-    comment: "[See in context](https://adjective-noun.cloudvent.net/blog/#:~:text=Blog)"
+    comment: "[See in context](https://exotic-bison.cloudvent.net/blog/#:~:text=Blog)"
 urlTranslation: blog/index.html
 Blog: ""
