--- a/rosey/translations/nl/blog/do-what-you-can-with-what-you-have-where-you-are.yaml
+++ b/rosey/translations/nl/blog/do-what-you-can-with-what-you-have-where-you-are.yaml
@@ -1,28 +1,29 @@
 _inputs:
   $:
     type: object
-    comment: "[blog/do-what-you-can-with-what-you-have-where-you-are](https://adjec\
-      tive-noun.cloudvent.net/blog/do-what-you-can-with-what-you-have-where-you\
-      -are)  //  [Git
-      history](https://github.com/org/repo/commits/staging/./rosey/translations\
-      /nl/blog/do-what-you-can-with-what-you-have-where-you-are.yaml)"
+    comment: "[blog/do-what-you-can-with-what-you-have-where-you-are](https://exoti\
+      c-bison.cloudvent.net/blog/do-what-you-can-with-what-you-have-where-you-a\
+      re)  //  [Git
+      history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/./rosey\
+      /translations/nl/blog/do-what-you-can-with-what-you-have-where-you-are.ya\
+      ml)"
     options:
       place_groups_below: false
       groups:
         - heading: Still to translate (nl)
-          comment: "[blog/do-what-you-can-with-what-you-have-where-you-are](https://adjec\
-            tive-noun.cloudvent.net/blog/do-what-you-can-with-what-you-have-whe\
-            re-you-are)  //  [Git
-            history](https://github.com/org/repo/commits/staging/./rosey/transl\
-            ations/nl/blog/do-what-you-can-with-what-you-have-where-you-are.yam\
-            l)"
+          comment: "[blog/do-what-you-can-with-what-you-have-where-you-are](https://exoti\
+            c-bison.cloudvent.net/blog/do-what-you-can-with-what-you-have-where\
+            -you-are)  //  [Git
+            history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
+            /rosey/translations/nl/blog/do-what-you-can-with-what-you-have-wher\
+            e-you-are.yaml)"
           inputs: []
         - heading: Already translated (nl)
-          comment: "[blog/do-what-you-can-with-what-you-have-where-you-are](https://adjec\
-            tive-noun.cloudvent.net/blog/do-what-you-can-with-what-you-have-whe\
-            re-you-are)  //  [Git
-            history](https://github.com/org/repo/commits/staging/./rosey/transl\
-            ations/nl/blog/do-what-you-can-with-what-you-have-where-you-are.yam\
-            l)"
+          comment: "[blog/do-what-you-can-with-what-you-have-where-you-are](https://exoti\
+            c-bison.cloudvent.net/blog/do-what-you-can-with-what-you-have-where\
+            -you-are)  //  [Git
+            history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
+            /rosey/translations/nl/blog/do-what-you-can-with-what-you-have-wher\
+            e-you-are.yaml)"
           inputs: []
 urlTranslation: blog/do-what-you-can-with-what-you-have-where-you-are.html
