--- a/rosey/translations/nl/blog/the-way-i-see-it-every-life-is-a-pile-of-good-things.yaml
+++ b/rosey/translations/nl/blog/the-way-i-see-it-every-life-is-a-pile-of-good-things.yaml
@@ -1,28 +1,29 @@
 _inputs:
   $:
     type: object
-    comment: "[blog/the-way-i-see-it-every-life-is-a-pile-of-good-things](https://a\
-      djective-noun.cloudvent.net/blog/the-way-i-see-it-every-life-is-a-pile-of\
-      -good-things)  //  [Git
-      history](https://github.com/org/repo/commits/staging/./rosey/translations\
-      /nl/blog/the-way-i-see-it-every-life-is-a-pile-of-good-things.yaml)"
+    comment: "[blog/the-way-i-see-it-every-life-is-a-pile-of-good-things](https://e\
+      xotic-bison.cloudvent.net/blog/the-way-i-see-it-every-life-is-a-pile-of-g\
+      ood-things)  //  [Git
+      history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/./rosey\
+      /translations/nl/blog/the-way-i-see-it-every-life-is-a-pile-of-good-thing\
+      s.yaml)"
     options:
       place_groups_below: false
       groups:
         - heading: Still to translate (nl)
-          comment: "[blog/the-way-i-see-it-every-life-is-a-pile-of-good-things](https://a\
-            djective-noun.cloudvent.net/blog/the-way-i-see-it-every-life-is-a-p\
-            ile-of-good-things)  //  [Git
-            history](https://github.com/org/repo/commits/staging/./rosey/transl\
-            ations/nl/blog/the-way-i-see-it-every-life-is-a-pile-of-good-things\
-            .yaml)"
+          comment: "[blog/the-way-i-see-it-every-life-is-a-pile-of-good-things](https://e\
+            xotic-bison.cloudvent.net/blog/the-way-i-see-it-every-life-is-a-pil\
+            e-of-good-things)  //  [Git
+            history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
+            /rosey/translations/nl/blog/the-way-i-see-it-every-life-is-a-pile-o\
+            f-good-things.yaml)"
           inputs: []
         - heading: Already translated (nl)
-          comment: "[blog/the-way-i-see-it-every-life-is-a-pile-of-good-things](https://a\
-            djective-noun.cloudvent.net/blog/the-way-i-see-it-every-life-is-a-p\
-            ile-of-good-things)  //  [Git
-            history](https://github.com/org/repo/commits/staging/./rosey/transl\
-            ations/nl/blog/the-way-i-see-it-every-life-is-a-pile-of-good-things\
-            .yaml)"
+          comment: "[blog/the-way-i-see-it-every-life-is-a-pile-of-good-things](https://e\
+            xotic-bison.cloudvent.net/blog/the-way-i-see-it-every-life-is-a-pil\
+            e-of-good-things)  //  [Git
+            history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
+            /rosey/translations/nl/blog/the-way-i-see-it-every-life-is-a-pile-o\
+            f-good-things.yaml)"
           inputs: []
 urlTranslation: blog/the-way-i-see-it-every-life-is-a-pile-of-good-things.html
