--- a/rosey/translations/nl/project/desk-setup.yaml
+++ b/rosey/translations/nl/project/desk-setup.yaml
@@ -1,25 +1,25 @@
 _inputs:
   $:
     type: object
-    comment: "[project/desk-setup](https://adjective-noun.cloudvent.net/project/des\
-      k-setup)  //  [Git
-      history](https://github.com/org/repo/commits/staging/./rosey/translations\
-      /nl/project/desk-setup.yaml)"
+    comment: "[project/desk-setup](https://exotic-bison.cloudvent.net/project/desk-\
+      setup)  //  [Git
+      history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/./rosey\
+      /translations/nl/project/desk-setup.yaml)"
     options:
       place_groups_below: false
       groups:
         - heading: Still to translate (nl)
-          comment: "[project/desk-setup](https://adjective-noun.cloudvent.net/project/des\
-            k-setup)  //  [Git
-            history](https://github.com/org/repo/commits/staging/./rosey/transl\
-            ations/nl/project/desk-setup.yaml)"
+          comment: "[project/desk-setup](https://exotic-bison.cloudvent.net/project/desk-\
+            setup)  //  [Git
+            history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
+            /rosey/translations/nl/project/desk-setup.yaml)"
           inputs:
             - Desk setup
         - heading: Already translated (nl)
-          comment: "[project/desk-setup](https://adjective-noun.cloudvent.net/project/des\
-            k-setup)  //  [Git
-            history](https://github.com/org/repo/commits/staging/./rosey/transl\
-            ations/nl/project/desk-setup.yaml)"
+          comment: "[project/desk-setup](https://exotic-bison.cloudvent.net/project/desk-\
+            setup)  //  [Git
+            history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
+            /rosey/translations/nl/project/desk-setup.yaml)"
           inputs: []
   Desk setup:
     label: Desk setup
@@ -27,7 +27,7 @@ _inputs:
     type: text
     options: {}
     comment: "[See in
-      context](https://adjective-noun.cloudvent.net/project/desk-setup#:~:text=\
-      Desk%20setup)"
+      context](https://exotic-bison.cloudvent.net/project/desk-setup#:~:text=De\
+      sk%20setup)"
 urlTranslation: project/desk-setup.html
 Desk setup: ""
