--- a/rosey/translations/nl/project/green-plant.yaml
+++ b/rosey/translations/nl/project/green-plant.yaml
@@ -1,25 +1,25 @@
 _inputs:
   $:
     type: object
-    comment: "[project/green-plant](https://adjective-noun.cloudvent.net/project/gr\
-      een-plant)  //  [Git
-      history](https://github.com/org/repo/commits/staging/./rosey/translations\
-      /nl/project/green-plant.yaml)"
+    comment: "[project/green-plant](https://exotic-bison.cloudvent.net/project/gree\
+      n-plant)  //  [Git
+      history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/./rosey\
+      /translations/nl/project/green-plant.yaml)"
     options:
       place_groups_below: false
       groups:
         - heading: Still to translate (nl)
-          comment: "[project/green-plant](https://adjective-noun.cloudvent.net/project/gr\
-            een-plant)  //  [Git
-            history](https://github.com/org/repo/commits/staging/./rosey/transl\
-            ations/nl/project/green-plant.yaml)"
+          comment: "[project/green-plant](https://exotic-bison.cloudvent.net/project/gree\
+            n-plant)  //  [Git
+            history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
+            /rosey/translations/nl/project/green-plant.yaml)"
           inputs:
             - Green Plant
         - heading: Already translated (nl)
-          comment: "[project/green-plant](https://adjective-noun.cloudvent.net/project/gr\
-            een-plant)  //  [Git
-            history](https://github.com/org/repo/commits/staging/./rosey/transl\
-            ations/nl/project/green-plant.yaml)"
+          comment: "[project/green-plant](https://exotic-bison.cloudvent.net/project/gree\
+            n-plant)  //  [Git
+            history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
+            /rosey/translations/nl/project/green-plant.yaml)"
           inputs: []
   Green Plant:
     label: Green Plant
@@ -27,7 +27,7 @@ _inputs:
     type: text
     options: {}
     comment: "[See in
-      context](https://adjective-noun.cloudvent.net/project/green-plant#:~:text\
-      =Green%20Plant)"
+      context](https://exotic-bison.cloudvent.net/project/green-plant#:~:text=G\
+      reen%20Plant)"
 urlTranslation: project/green-plant.html
 Green Plant: ""
