--- a/rosey/translations/nl/project/sea-and-rest.yaml
+++ b/rosey/translations/nl/project/sea-and-rest.yaml
@@ -1,25 +1,25 @@
 _inputs:
   $:
     type: object
-    comment: "[project/sea-and-rest](https://adjective-noun.cloudvent.net/project/s\
-      ea-and-rest)  //  [Git
-      history](https://github.com/org/repo/commits/staging/./rosey/translations\
-      /nl/project/sea-and-rest.yaml)"
+    comment: "[project/sea-and-rest](https://exotic-bison.cloudvent.net/project/sea\
+      -and-rest)  //  [Git
+      history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/./rosey\
+      /translations/nl/project/sea-and-rest.yaml)"
     options:
       place_groups_below: false
       groups:
         - heading: Still to translate (nl)
-          comment: "[project/sea-and-rest](https://adjective-noun.cloudvent.net/project/s\
-            ea-and-rest)  //  [Git
-            history](https://github.com/org/repo/commits/staging/./rosey/transl\
-            ations/nl/project/sea-and-rest.yaml)"
+          comment: "[project/sea-and-rest](https://exotic-bison.cloudvent.net/project/sea\
+            -and-rest)  //  [Git
+            history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
+            /rosey/translations/nl/project/sea-and-rest.yaml)"
           inputs:
             - Sea and rest
         - heading: Already translated (nl)
-          comment: "[project/sea-and-rest](https://adjective-noun.cloudvent.net/project/s\
-            ea-and-rest)  //  [Git
-            history](https://github.com/org/repo/commits/staging/./rosey/transl\
-            ations/nl/project/sea-and-rest.yaml)"
+          comment: "[project/sea-and-rest](https://exotic-bison.cloudvent.net/project/sea\
+            -and-rest)  //  [Git
+            history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
+            /rosey/translations/nl/project/sea-and-rest.yaml)"
           inputs: []
   Sea and rest:
     label: Sea and rest
@@ -27,7 +27,7 @@ _inputs:
     type: text
     options: {}
     comment: "[See in
-      context](https://adjective-noun.cloudvent.net/project/sea-and-rest#:~:tex\
-      t=Sea%20and%20rest)"
+      context](https://exotic-bison.cloudvent.net/project/sea-and-rest#:~:text=\
+      Sea%20and%20rest)"
 urlTranslation: project/sea-and-rest.html
 Sea and rest: ""
