--- a/rosey/translations/nl/project/the-rocks.yaml
+++ b/rosey/translations/nl/project/the-rocks.yaml
@@ -1,25 +1,25 @@
 _inputs:
   $:
     type: object
-    comment: "[project/the-rocks](https://adjective-noun.cloudvent.net/project/the-\
-      rocks)  //  [Git
-      history](https://github.com/org/repo/commits/staging/./rosey/translations\
-      /nl/project/the-rocks.yaml)"
+    comment: "[project/the-rocks](https://exotic-bison.cloudvent.net/project/the-ro\
+      cks)  //  [Git
+      history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/./rosey\
+      /translations/nl/project/the-rocks.yaml)"
     options:
       place_groups_below: false
       groups:
         - heading: Still to translate (nl)
-          comment: "[project/the-rocks](https://adjective-noun.cloudvent.net/project/the-\
-            rocks)  //  [Git
-            history](https://github.com/org/repo/commits/staging/./rosey/transl\
-            ations/nl/project/the-rocks.yaml)"
+          comment: "[project/the-rocks](https://exotic-bison.cloudvent.net/project/the-ro\
+            cks)  //  [Git
+            history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
+            /rosey/translations/nl/project/the-rocks.yaml)"
           inputs:
             - The rocks
         - heading: Already translated (nl)
-          comment: "[project/the-rocks](https://adjective-noun.cloudvent.net/project/the-\
-            rocks)  //  [Git
-            history](https://github.com/org/repo/commits/staging/./rosey/transl\
-            ations/nl/project/the-rocks.yaml)"
+          comment: "[project/the-rocks](https://exotic-bison.cloudvent.net/project/the-ro\
+            cks)  //  [Git
+            history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
+            /rosey/translations/nl/project/the-rocks.yaml)"
           inputs: []
   The rocks:
     label: The rocks
@@ -27,7 +27,7 @@ _inputs:
     type: text
     options: {}
     comment: "[See in
-      context](https://adjective-noun.cloudvent.net/project/the-rocks#:~:text=T\
-      he%20rocks)"
+      context](https://exotic-bison.cloudvent.net/project/the-rocks#:~:text=The\
+      %20rocks)"
 urlTranslation: project/the-rocks.html
 The rocks: ""
