Updated 2 files via CloudCannon

--- a/rosey/locales/nl.json
+++ b/rosey/locales/nl.json
@@ -1,7 +1,7 @@
 {
 	"About": {
 		"original": "About",
-		"value": "About"
+		"value": "Over"
 	},
 	"Antelope Canyon": {
 		"original": "Antelope Canyon",
