--- a/rosey/translations/nl/about.yaml
+++ b/rosey/translations/nl/about.yaml
@@ -1,28 +1,28 @@
 _inputs:
   $:
     type: object
-    comment: >-
-      [about/](https://exotic-bison.cloudvent.net/about/)  //  [Git
-      history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/./rosey/translations/nl/about.yaml)
+    comment: "[about/](https://exotic-bison.cloudvent.net/about/)  //  [Git
+      history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/./rosey\
+      /translations/nl/about.yaml)"
     options:
       place_groups_below: false
       groups:
         - heading: Still to translate (nl)
-          comment: >-
-            [about/](https://exotic-bison.cloudvent.net/about/)  //  [Git
-            history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/./rosey/translations/nl/about.yaml)
+          comment: "[about/](https://exotic-bison.cloudvent.net/about/)  //  [Git
+            history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
+            /rosey/translations/nl/about.yaml)"
+          inputs: []
+        - heading: Already translated (nl)
+          comment: "[about/](https://exotic-bison.cloudvent.net/about/)  //  [Git
+            history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
+            /rosey/translations/nl/about.yaml)"
           inputs:
             - About
-        - heading: Already translated (nl)
-          comment: >-
-            [about/](https://exotic-bison.cloudvent.net/about/)  //  [Git
-            history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/./rosey/translations/nl/about.yaml)
-          inputs: []
   About:
     label: About
     hidden: false
     type: text
     options: {}
-    comment: '[See in context](https://exotic-bison.cloudvent.net/about/#:~:text=About)'
+    comment: "[See in context](https://exotic-bison.cloudvent.net/about/#:~:text=About)"
 urlTranslation: about/index.html
 About: Over
