Updated 2 files via CloudCannon

--- a/rosey/locales/nl.json
+++ b/rosey/locales/nl.json
@@ -29,7 +29,7 @@
 	},
 	"Hi there, I am Vanessa Marley": {
 		"original": "Hi there, I am Vanessa Marley",
-		"value": "Hi there, I am Vanessa Marley"
+		"value": "Hallo, ik ben Vanessa Marley"
 	},
 	"Life": {
 		"original": "Life",
