--- a/rosey/locales/nl.json
+++ b/rosey/locales/nl.json
@@ -97,7 +97,7 @@
 	},
 	"The-longer-I-live-the-more-I-realize-that-I-am-never-wrong-about-anything-and-that-all-the-pains-I-have-so-humbly-taken-to-verify-my-notions-have-only-wasted-my-time": {
 		"original": "The longer I live, the more I realize that I am never wrong about anything, and that all the pains I have so humbly taken to verify my notions have only wasted my time!",
-		"value": "The longer I live, the more I realize that I am never wrong about anything, and that all the pains I have so humbly taken to verify my notions have only wasted my time!"
+		"value": "Naarmate ik langer leef, besef ik steeds meer dat ik nooit ergens ongelijk in heb en dat alle moeite die ik zo nederig heb gedaan om mijn opvattingen te verifiëren, alleen maar tijdverspilling is geweest!\n"
 	},
 	"Travel": {
 		"original": "Travel",
