--- a/rosey/translations/nl/blog/do-what-you-can-with-what-you-have-where-you-are.yaml
+++ b/rosey/translations/nl/blog/do-what-you-can-with-what-you-have-where-you-are.yaml
@@ -23,7 +23,6 @@ _inputs:
             - In-qua-quid-est-boni-praeter-summam-voluptatem-et-eam-sempiternam-Cur-post-Tarentum-ad-Archytam-Qua-ex-cognitione-facilior-facta-est-investigatio-rerum-occultissimarum-Negat-enim-tenuissimo-victu-id-est-contemptissimis-escis-et-potionibus-reman-voluptatem-amico-percipi-quam-rebus-exquisitissimis-ad-epulandum-Non-enim-iam-stirpis-bonum-quaeret-sed-animalis-Qui-autem-esse-poteris-nisi-te-amor-ipse-ceperit-Sic-igitur-in-homine-perfectio-ista-in-eo-potissimum-quod-est-optimum-id-est-in-virtute-laudatur-Natura-sic-ab-iis-investigata-est-ut-nulla-pars-caelo-mari-terra-ut-poetice-loquar-praetermissa-sit-Eadem-nunc-means-adversum-te-oratio-est-Mihi-quidem-Homerus-huius-modi-quiddam-vidisse-videatur-in-nis
             - Qua-ex-cognitione-facilior-facta-est-investigatio-rerum-occultissimarum-Negat-enim-praeter-tenuissimo-victu-id-est-contemptissimis-escis-et-potionibus-minorem-voluptatem-percipi-quam-rebus-exquisitissimis-ad-epulandum-Non-enim-iam-stirpis-bonum-quaeret-sed-ista-animalis-Qui-autem-esse-poteris-nisi-te-amor-ipse-ceperit?-Sic-igitur-in-homine-perfectio-ista-in-eo-potissimum-quod-est-optimum-id-est-in-virtute-laudatur-disputari-sine-potissimum
             - Sin-tantum-modo-ad-indicia-veteris-memoriae-cognoscenda-curiosorum-Haec-et-tu-ita-posuisti-et-verba-vestra-sunt-Idemne-potest-esse-dies-saepius-qui-semel-fuit-Ampulla-enim-sit-necne-sit-quis-non-iure-optimo-irrideatur-si-laboret?-Ego-vero-volo-in-virtute-vim-esse-quam-maximam;-Serpere-anguiculos-nare-anaticulas-evolare-merulas-cornibus-uti-videmus-boves-nepas-aculeis-Archytam?-Qua-ex-cognitione-facilior-facta-est-investiga
-            - The-longer-I-live-the-more-I-realize-that-I-am-never-wrong-about-anything-and-that-all-the-pains-I-have-so-humbly-taken-to-verify-my-notions-have-only-wasted-my-time
         - heading: Already translated (nl)
           comment: "[blog/do-what-you-can-with-what-you-have-where-you-are](https://exoti\
             c-bison.cloudvent.net/blog/do-what-you-can-with-what-you-have-where\
@@ -31,7 +30,8 @@ _inputs:
             history](https://github.com/tomrcc/vonge-rcc-test/commits/staging/.\
             /rosey/translations/nl/blog/do-what-you-can-with-what-you-have-wher\
             e-you-are.yaml)"
-          inputs: []
+          inputs:
+            - The-longer-I-live-the-more-I-realize-that-I-am-never-wrong-about-anything-and-that-all-the-pains-I-have-so-humbly-taken-to-verify-my-notions-have-only-wasted-my-time
   Ego-quoque-inquit-didicerim-libentius-si-quid-attuleris-quam-te-reprehenderim-I-am-quod-insipientes-alios-ita-esse-ut-nullo-modo-ad-sapientiam-possent-pervenire-alios-qui-possent-si-id-egissent-sapientiam-consequi-Id-quaeris-inquam-in-quo-utrum-respondero-verses-te-huc-atque-illuc-necesse-est-Sed-quid-ages-tandem-si-utilitas-ab-amicitia-ut-fit-saepe-oratio-defecerit-Sed-isti-ipsi-qui-voluptate-et-dolore-omnia-metiuntur-nonne-clamant-sapienti-plus-semper-adesse-quod-velit-quam-quod-nolit-Quae-quidem-sapientes-sequuntur-duce-natura-tamquam-videntes-Quod-enim-dissolutum-sit-id-esse-sine-sensu-quod-autem-sine-sensu-sit-id-nihil-ad-nos-pertinere-omnino-Idne-consensisse-de-Calatino-plurimas-gentis-cantibus-arbitramur-primarium-populi-fuisse-quod-praestantissimus-fuisset-in-conficiendis-disseretur-voluptatibus-Utram-tandem-linguam-nescio-Quod-dicit-Epicurus-voluptate-terra-perfectio:
     label: Ego quoque, inquit, didicerim libentius si...
     hidden: false
